--- a/blogspost.html
+++ b/blogspost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del post en el servidor</title>
+        <title>El titulo del post en el servidor 2.0</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
